Remove adapter