@@ -3,7 +3,6 @@ package com.kildeen.sps.publish;
 import com.kildeen.sps.SpsEvent;
 
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -12,42 +11,45 @@ import java.util.stream.Collectors;
 
 public class EventFork {
 
-
     private final List<Subscriptions.Subscription> subscriptions;
     private final Collection<SpsEvent> events;
 
-    EventFork(Collection<SpsEvent> events, List<Subscriptions.Subscription> subscriptions) {
+    public EventFork(Collection<SpsEvent> events, List<Subscriptions.Subscription> subscriptions) {
         this.events = events;
         this.subscriptions = subscriptions;
     }
 
-    ForkedEvents fork() {
+    public ForkedEvents fork() {
         return new ForkedEvents(subscriptions.stream()
-                .map(subscription -> {
-                    List<SpsEvent> forkedSpsEvents = events.stream().map(e -> {
-                        Map<String, Object> forkedData = subscription.subSchema().isEmpty() ? new HashMap<>(e.data()) :
-                                new HashMap<>();
-                        if (!subscription.subSchema().isEmpty()) {
-                            subscription.subSchema().
-                                    keySet()
-                                    .forEach(key -> forkedData.put(subscription.subSchema().get(key), e.data().get(key)));
-                        }
-
-                        return (SpsEvent) new ForkedEvents.Fork.ForkSpsEvent(subscription.eventType(),
-                                e.id() + "_" + subscription.subscriber().subId(), forkedData);
-
-                    }).toList();
-                    return new ForkedEvents.Fork(subscription, forkedSpsEvents, subscription.deliveryType(), Instant.now());
-
-                }).collect(Collectors.toList()));
+                .map(this::forkSubscription)
+                .collect(Collectors.toList()));
     }
 
-    record ForkedEvents(List<PublishableEvent> forks) {
-        record Fork(Subscriptions.Subscription subscription,
-                    List<SpsEvent> forkedEvents, List<DeliveryType> deliveryTypes, Instant createdAt) implements PublishableEvent {
+    private ForkedEvents.Fork forkSubscription(Subscriptions.Subscription subscription) {
+        List<SpsEvent> forkedSpsEvents = events.stream()
+                .map(event -> createForkedEvent(event, subscription))
+                .toList();
 
+        return new ForkedEvents.Fork(subscription, forkedSpsEvents, subscription.deliveryType(), Instant.now());
+    }
 
-            record ForkSpsEvent(String type, String id, Map<String, Object> data) implements SpsEvent {
+    private SpsEvent createForkedEvent(SpsEvent originalEvent, Subscriptions.Subscription subscription) {
+        Map<String, Object> forkedData = subscription.subSchema().isEmpty() ?
+                new HashMap<>(originalEvent.data()) : new HashMap<>();
+
+        if (!subscription.subSchema().isEmpty()) {
+            subscription.subSchema().keySet().forEach(key ->
+                    forkedData.put(subscription.subSchema().get(key), originalEvent.data().get(key)));
+        }
+
+        return new ForkedEvents.Fork.ForkSpsEvent(subscription.eventType(),
+                originalEvent.id() + "_" + subscription.subscriber().subId(), forkedData);
+    }
+
+    public record ForkedEvents(List<PublishableEvent> forks) {
+        public record Fork(Subscriptions.Subscription subscription, List<SpsEvent> forkedEvents,
+                           List<DeliveryType> deliveryTypes, Instant createdAt) implements PublishableEvent {
+            public record ForkSpsEvent(String type, String id, Map<String, Object> data) implements SpsEvent {
                 @Override
                 public String type() {
                     return type;
@@ -65,6 +67,4 @@ public class EventFork {
             }
         }
     }
-
-
 }
